# cmake_pract_1

./: CMakeLists.txt  License.txt  README.md  adder.cpp  main.cpp  out
Adder/: adder.cpp
